modules/v1/vpc.tf
#-------------VPC-----------
resource "aws_vpc" "k8s_vpc" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags {
    Name = "kub_vpc"
  }
}
